@@ -102,10 +102,13 @@ public class DiffMLGraphicalVerbalizer {
 		this.pes1 = new PESSemantics<Integer>(logpes);
 
 		this.commonLabels = new HashSet<String>();
-		this.commonLabels.addAll(this.model.getLabels());
+		this.commonLabels.addAll(this.model.getReader().mapNew2OldLbls.values());
 		this.commonLabels.addAll(pes1.getLabels());
 		this.commonLabels.removeAll(silents);
 
+
+		System.out.println(this.pes1.getPES().toDot());
+		System.out.println(this.pes2.toDot());
 		System.out.println("Common labels = " + commonLabels);
 
 		this.differences = new DifferencesML();
@@ -142,9 +145,19 @@ public class DiffMLGraphicalVerbalizer {
 
 		Unfolder_PetriNet unfolder = new Unfolder_PetriNet(net, BPstructBP.MODE.ESPARZA, silents);
 		unfolder.computeUnfolding();
-
 		Unfolding2PES pes = new Unfolding2PES(unfolder, labels);
 		NewUnfoldingPESSemantics<Integer> pessem = new NewUnfoldingPESSemantics<Integer>(pes.getPES(), pes);
+
+		List<String> oldLabels = pessem.getLabels();
+		List<String> newLabels = new ArrayList<>();
+		for(String oldL : oldLabels)
+			if(model.getReader().mapNew2OldLbls.containsKey(oldL))
+				newLabels.add(model.getReader().mapNew2OldLbls.get(oldL));
+			else
+				newLabels.add(oldL);
+
+		pessem.setLabels(newLabels);
+
 		return pessem;
 	}
 
@@ -195,6 +208,8 @@ public class DiffMLGraphicalVerbalizer {
 		markExpandedPrefix(root, HashMultimap.<String, Operation> create(), HashMultimap.<String, Operation> create(), new HashSet<State>(), null);
 		findSkipMismatches(root, new HashMap<Integer, Pair<State, Operation>>(), new HashMap<Integer, Pair<State, Operation>>(), new HashSet<State>());
 		verbalizeAdditionalModelBehavior();
+        // TO IMPLEMENT
+        // verbalizeOptionalModelBehavior();
 
 		for (Pair<Integer, Integer> p: causalityConcurrencyMismatches.keySet()) {
 			Map<Pair<Integer, Integer>, State> map = new HashMap<>();
@@ -219,11 +234,13 @@ public class DiffMLGraphicalVerbalizer {
                 //// ==============================
                 if (pes1.getBRelation(ctx.getKey().getFirst(), p.getFirst()) == BehaviorRelation.CAUSALITY){
                     String sentence = String.format("In the log, after '%s', '%s' occurs before '%s', while in the model they are concurrent",
-                            translate(pes1, ((Pair<Integer, Integer>) lastMatchMap.get(ctx.getValue()).target).getFirst()),
+                            translate(pes1, ((Pair<Integer, Integer>) lastMatchMap.get(ctx.getValue()).target).getSecond()),
                             translate(pes1, ctx.getKey().getFirst()), translate(pes1, p.getFirst()));
 
                     DifferenceML diff = print2Tasks(ctx.getKey().getSecond(), p.getSecond(), pes2, replayer, net, loader, sentence);
+
                     if(diff != null) {
+						diff.setSentence(sentence);
                         diff.setType("CAUSCONC1");
                         differences.add(diff);
                     }
@@ -250,9 +267,11 @@ public class DiffMLGraphicalVerbalizer {
 			if (DEBUG)
 				System.out.printf(">> Event substition (%s, %s, %s)\n", enablingState,
 						translate(pes1, p.getFirst()), translate(pes2, p.getSecond()));
+
 			String sentence = String.format("In the log, after '%s', '%s' is substituted by '%s'",
 					translate(pes1, ((Pair<Integer, Integer>)lastMatchMap.get(enablingState).target).getFirst()),
-					translate(pes1, p.getFirst()), translate(pes2, p.getSecond()));
+					translate(pes2, p.getSecond()),
+					translate(pes1, p.getFirst()));
 
             List<Integer> singleton= new LinkedList<>();
             singleton.add(p.getSecond());
@@ -311,18 +330,24 @@ public class DiffMLGraphicalVerbalizer {
                     }
 
                 } else if (pes1.getBRelation(ctx.getKey().getFirst(), p.getFirst()) == BehaviorRelation.CAUSALITY){
-                    String sentence = String.format("In the log, after '%s', '%s' occurs before '%s', while in the model they are mutually exclusive",
-                            translate(pes1, p.getFirst()), translate(pes1, ctx.getKey().getFirst()),
-                            translate(pes1, ctx.getKey().getFirst()), translate(pes1, p.getFirst()));
+					String sentence = String.format("In the log, after '%s', '%s' occurs before '%s', while in the model they are mutually exclusive",
+							translate(pes1, ((Pair<Integer, Integer>)lastMatchMap.get(ctx.getValue()).target).getFirst()),
+							translate(pes1, ctx.getKey().getFirst()),
+							translate(pes1, p.getFirst()));
 
-                    DifferenceML diff = print2Tasks(p.getSecond(), ctx.getKey().getSecond(), pes2, replayer, net, loader, sentence);
-                    if (diff != null) {
+                    DifferenceML diff = print2Tasks(ctx.getKey().getSecond(), p.getSecond(), pes2, replayer, net, loader, sentence);
+
+//					sentence = String.format("In the log, after '%s', '%s' occurs before '%s', while in the model they are mutually exclusive",
+//							diff.getStart().get(0),
+//							diff.getA().get(0),
+//							diff.getB().get(0));
+
+					if (diff != null) {
                         diff.setType("CONFLICT3");
                         differences.add(diff);
                     }
-
-                }else {
-                    String sentence = String.format("In the log, after '%s', '%s' occurs before '%s', while in the model they are mutually exclusive",
+                }else if (pes2.getBRelation(ctx.getKey().getSecond(), p.getSecond()) == BehaviorRelation.CAUSALITY) {
+                    String sentence = String.format("In the model, after '%s', '%s' occurs before '%s', while in the log they are mutually exclusive",
                             translate(pes2, ((Pair<Integer, Integer>) lastMatchMap.get(ctx.getValue()).target).getSecond()),
                             translate(pes2, ctx.getKey().getSecond()), translate(pes2, p.getSecond()));
 
@@ -388,7 +413,8 @@ public class DiffMLGraphicalVerbalizer {
 		for (Entry<State, List<Integer>> entry:	expprefix.getAdditionalAcyclicIntervals().entries()) {
 			if (DEBUG)
 				System.out.printf("In the log, %s do(es) not occur after %s\n", translate(entry.getValue()), entry.getKey());
-			String sentence = String.format("In the log, %s do(es) not occur after '%s'",
+
+			String sentence = String.format("In the log, the interval %s does not occur after '%s'",
 					translate(entry.getValue()), translate(pes1, ((Pair<Integer,Integer>)lastMatchMap.get(entry.getKey()).target).getFirst()));
 
 			DifferenceML diff = printTasksGO(entry.getValue(), pes2, replayer, net, loader, sentence);
@@ -403,7 +429,7 @@ public class DiffMLGraphicalVerbalizer {
 			String sentence = String.format("In the log, the cycle involving %s does not occur after '%s'",
 					translate(entry.getValue()), translate(pes1, ((Pair<Integer,Integer>)lastMatchMap.get(entry.getKey()).target).getFirst()));
 
-			DifferenceML diff = printTasksHL(new ArrayList<Integer>(entry.getValue()), pes2, replayer, net, loader, sentence);
+			DifferenceML diff = printTasksHL2(((Pair<Integer,Integer>)lastMatchMap.get(entry.getKey()).target).getFirst(), new ArrayList<Integer>(entry.getValue()), pes2, replayer, net, loader, sentence);
             if(diff != null) {
                 diff.setType("UNOBSCYCLICINTER");
                 differences.add(diff);
@@ -419,8 +445,7 @@ public class DiffMLGraphicalVerbalizer {
 		return set;
 	}
 
-	private void markExpandedPrefix(State curr, Multimap<String, Operation> lpending,
-									Multimap<String, Operation> rpending, Set<State> visited, Operation lastMatch) {
+	private void markExpandedPrefix(State curr, Multimap<String, Operation> lpending, Multimap<String, Operation> rpending, Set<State> visited, Operation lastMatch) {
 		visited.add(curr);
 		lastMatchMap.put(curr, lastMatch);
 
@@ -567,9 +592,9 @@ public class DiffMLGraphicalVerbalizer {
 					String sentence = String.format("In the model, '%s' occurs after '%s' instead of '%s'",
 							translate(pes2, (Integer) op.target),
 							pred == null || pred.label.equals("_0_") ? "<start state>" :
-									translate(pes2, ((Pair<Integer, Integer>)pred.target).getSecond()),
+									translate(pes2, ((Pair<Integer, Integer>)pred.target).getFirst()),
 							succ == null || succ.label.equals("_1_") ? "<end state>" :
-									translate(pes2, ((Pair<Integer, Integer>)succ.target).getSecond()));
+									translate(pes2, ((Pair<Integer, Integer>)pred.target).getSecond()));
 
                     List<Integer> singleton = new LinkedList<>();
                     singleton.add((Integer) op.target);
@@ -906,21 +931,23 @@ public class DiffMLGraphicalVerbalizer {
 					if (pair != null) {
 						f = (Integer)pair.getSecond().target;
 
-						Pair<List<Integer>,List<Integer>> tuplePair = findCausalInconsistency(sigma, e, f, stack);
+						HashSet<Pair<List<Integer>,List<Integer>>> tuplePairs = findCausalInconsistency(sigma, e, f, stack);
 
-						if (tuplePair != null) {
-							List<Integer> tuple = tuplePair.getFirst();
+						for(Pair<List<Integer>,List<Integer>> tuplePair : tuplePairs){
+							if (tuplePair != null) {
+								List<Integer> tuple = tuplePair.getFirst();
 
-							State enablingState = findEnablingState(stack, op, pair.getSecond());
-							System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
-//						assertCausalityConcurrencyMismatch(pair.getFirst(), e, tuple.get(1), tuple.get(2), tuple.get(3));
-							assertCausalityConcurrencyMismatch(enablingState, e, tuple.get(1), tuple.get(2), tuple.get(3));
+								State enablingState = findEnablingState(stack, op, pair.getSecond());
+								System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
+								//						assertCausalityConcurrencyMismatch(pair.getFirst(), e, tuple.get(1), tuple.get(2), tuple.get(3));
+								assertCausalityConcurrencyMismatch(enablingState, e, tuple.get(1), tuple.get(2), tuple.get(3));
 
-							lhideOps.remove(op);
-							rhideOps.remove(pair.getSecond());
-							n_chs.remove(pair);
-						} else
-							pending.put(new Pair<>(op, pair.getSecond()), new Pair<>(sigma, pair.getFirst()));
+								lhideOps.remove(op);
+								rhideOps.remove(pair.getSecond());
+								n_chs.remove(pair);
+							} else
+								pending.put(new Pair<>(op, pair.getSecond()), new Pair<>(sigma, pair.getFirst()));
+						}
 					} else
 						n_chs.add(new Pair<>(sigma, op));
 					break;
@@ -932,21 +959,22 @@ public class DiffMLGraphicalVerbalizer {
 						e = (Integer)pairp.getSecond().target;
 
 						// Line 15:
-						Pair<List<Integer>,List<Integer>> tuplePair = findCausalInconsistency(sigma, e, f, stack);
+						HashSet<Pair<List<Integer>,List<Integer>>> tuplePairs = findCausalInconsistency(sigma, e, f, stack);
+						for(Pair<List<Integer>,List<Integer>> tuplePair : tuplePairs){
+							if (tuplePair != null) {
+								List<Integer> tuple = tuplePair.getFirst();
 
-						if (tuplePair != null) {
-							List<Integer> tuple = tuplePair.getFirst();
-
-							State enablingState = findEnablingState(stack, pairp.getSecond(), op);
-							System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
+								State enablingState = findEnablingState(stack, pairp.getSecond(), op);
+								System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
 //						assertCausalityConcurrencyMismatch(pairp.getFirst(), e, tuple.get(1), tuple.get(2), tuple.get(3));
-							assertCausalityConcurrencyMismatch(enablingState, e, tuple.get(1), tuple.get(2), tuple.get(3));
+								assertCausalityConcurrencyMismatch(enablingState, e, tuple.get(1), tuple.get(2), tuple.get(3));
 
-							rhideOps.remove(op);
-							lhideOps.remove(pairp.getSecond());
-							n_chs.remove(pairp);
-						} else
-							pending.put(new Pair<>(pairp.getSecond(), op), new Pair<>(pairp.getFirst(), sigma));
+								rhideOps.remove(op);
+								lhideOps.remove(pairp.getSecond());
+								n_chs.remove(pairp);
+							} else
+								pending.put(new Pair<>(pairp.getSecond(), op), new Pair<>(pairp.getFirst(), sigma));
+						}
 					} else
 						n_chs.add(new Pair<>(sigma, op));
 					break;
@@ -955,24 +983,26 @@ public class DiffMLGraphicalVerbalizer {
 					for (Pair<Operation, Operation> opPair: pending.keySet()) {
 						Integer ep = (Integer)opPair.getFirst().target;
 						Integer fp = (Integer)opPair.getSecond().target;
-						Pair<List<Integer>,List<Integer>> tuplePair = findCausalInconsistency(sigma, ep, fp, stack);
-						if (tuplePair != null) {
-							List<Integer> tuple = tuplePair.getFirst();
+						HashSet<Pair<List<Integer>,List<Integer>>> tuplePairs = findCausalInconsistency(sigma, ep, fp, stack);
+						for(Pair<List<Integer>,List<Integer>> tuplePair : tuplePairs){
+							if (tuplePair != null) {
+								List<Integer> tuple = tuplePair.getFirst();
 
-							Pair<State, State> states = pending.get(opPair);
-							State leftState = states.getFirst(), rightState = states.getSecond();
+								Pair<State, State> states = pending.get(opPair);
+								State leftState = states.getFirst(), rightState = states.getSecond();
 
-							State enablingState = findEnablingState(stack, opPair.getFirst(), opPair.getSecond());
-							System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
+								State enablingState = findEnablingState(stack, opPair.getFirst(), opPair.getSecond());
+								System.out.printf("Causality/Concurrency mismatch %s enabling state: %s\n", tuple, enablingState);
 
-							assertCausalityConcurrencyMismatch(enablingState, tuple.get(0), tuple.get(1), tuple.get(2), tuple.get(3));
-							toRemove.add(opPair);
-							n_chs.remove(new Pair<>(leftState, opPair.getFirst()));
-							chs.remove(new Pair<>(leftState, opPair.getFirst()));
-							n_chs.remove(new Pair<>(rightState, opPair.getSecond()));
-							chs.remove(new Pair<>(rightState, opPair.getSecond()));
-						} else {
+								assertCausalityConcurrencyMismatch(enablingState, tuple.get(0), tuple.get(1), tuple.get(2), tuple.get(3));
+								toRemove.add(opPair);
+								n_chs.remove(new Pair<>(leftState, opPair.getFirst()));
+								chs.remove(new Pair<>(leftState, opPair.getFirst()));
+								n_chs.remove(new Pair<>(rightState, opPair.getSecond()));
+								chs.remove(new Pair<>(rightState, opPair.getSecond()));
+							} else {
 //						throw new RuntimeException("Something wrong with a Causality/Concurrency mismatch" + opPair);
+							}
 						}
 					}
 					for (Pair<Operation, Operation> opPair: toRemove)
@@ -1066,6 +1096,7 @@ public class DiffMLGraphicalVerbalizer {
 			stack.pop();
 		}
 	}
+
 	private State findEnablingState(LinkedList<Operation> stack, Operation lop, Operation rop) {
 		Integer e = null;
 		if (lop.op == Op.LHIDE)
@@ -1179,11 +1210,17 @@ public class DiffMLGraphicalVerbalizer {
 			return new Pair<Integer,Integer>(null, (Integer)op.target);
 	}
 
-	public Pair<List<Integer>, List<Integer>> findCausalInconsistency(State sigma, Integer e, Integer f, LinkedList<Operation> stack) {
-		BitSet epred = pes1.getDirectPredecessors(e);
-		BitSet fpred = new BitSet();
-		for (Integer pred: pes2.getDirectPredecessors(f))
-			fpred.set(pred);
+	public HashSet<Pair<List<Integer>, List<Integer>>> findCausalInconsistency(State sigma, Integer e, Integer f, LinkedList<Operation> stack) {
+//		BitSet epred = pes1.getDirectPredecessors(e);
+//		BitSet fpred = new BitSet();
+//		for (Integer pred: pes2.getDirectPredecessors(f))
+//			fpred.set(pred);
+
+		HashSet<Pair<List<Integer>, List<Integer>>> pairDiff = new HashSet<>();
+
+		BitSet epred = (BitSet) pes1.getStrictCausesOf(e).clone();
+		BitSet fpred = (BitSet) pes2.getCausesOf(f).clone();
+
 		List<Integer> cutoffs = new ArrayList<>();
 		Integer localF = f;
 
@@ -1199,15 +1236,19 @@ public class DiffMLGraphicalVerbalizer {
 					epred.clear(ep);
 					fpred.clear(fp);
 					if (!causallyConsistent(e, ep, localF, fp))
-						return new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs);
+						pairDiff.add(new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs));
+//						return new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs);
+
 					break;
 				case LHIDE:
-					epred.or(pes1.getDirectPredecessors(ep));
+//					epred.or(pes1.getDirectPredecessors(ep));
+					epred.or(pes1.getStrictCausesOf(ep));
 					epred.clear(ep);
 					break;
 				case RHIDE:
-					for (Integer pred: pes2.getDirectPredecessors(fp))
-						fpred.set(pred);
+//					for (Integer pred: pes2.getDirectPredecessors(fp))
+//						fpred.set(pred);
+					fpred.or(pes2.getCausesOf(f));
 					fpred.clear(fp);
 					break;
 				case MATCHNSHIFT:
@@ -1223,7 +1264,8 @@ public class DiffMLGraphicalVerbalizer {
 
 					localF = pes2.unshift(f, fp);
 					if (!causallyConsistent(e, ep, localF, fp))
-						return new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs);
+						pairDiff.add(new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs));
+//						return new Pair<>(Arrays.asList(e,ep,localF,fp), cutoffs);
 					break;
 				case RHIDENSHIFT:
 					localF = pes2.unshift(f, fp);
@@ -1239,7 +1281,7 @@ public class DiffMLGraphicalVerbalizer {
 			if (epred.isEmpty() && fpred.isEmpty())
 				break;
 		}
-		return null;
+		return pairDiff;
 	}
 
 	private boolean causallyConsistent(Integer e, Integer ep, Integer f, Integer fp) {
@@ -2262,6 +2304,143 @@ public class DiffMLGraphicalVerbalizer {
 		return diff;
 	}
 
+	private DifferenceML printTasksHL2(Integer startEvt, List<Integer> events, NewUnfoldingPESSemantics<Integer> pes, BPMNReplayerML replayerBPMN, PetriNet net, BPMNReader loader, String sentence) {
+		List<String> start = new ArrayList<>();
+		List<String> a = new ArrayList<>();
+		List<String> end = new ArrayList<>();
+		List<String> greys = new ArrayList<>();
+
+		BitSet inter = null;
+		BitSet union = null;
+
+		List<Integer> visibleEvents = new ArrayList<>();
+		List<String> visibleLabels = new ArrayList<>();
+		for(Integer ev : events)
+			if(model.getLabels().contains(pes.getLabel(ev))) {
+				visibleEvents.add(ev);
+				visibleLabels.add(pes.getLabel(ev));
+			}
+
+		HashMap<String, String> aColors = new HashMap<>();
+
+		for(Integer event : visibleEvents){
+			if(!commonLabels.contains(pes.getLabel(event)))
+				continue;
+
+			BitSet conf1 = pes.getLocalConfiguration(event);
+			Trace<Integer> trace = new Trace<>();
+			trace.addAllStrongCauses(pes.getEvents(conf1));
+
+			HashMap<String, String> colorsBPMN = replayerBPMN.execute(pes.getLabel(event), pes.getPomset(conf1, commonLabels), new HashMap<String, Integer>(), null);
+
+			for(Entry<String, String> entry : colorsBPMN.entrySet())
+				if(entry.getValue().equals("red"))
+					a.add(entry.getKey());
+				else if(!a.contains(entry.getKey()))
+					aColors.put(entry.getKey(), "green");
+
+			if(inter == null)
+				inter = (BitSet) conf1.clone();
+			else
+				inter.and(conf1);
+
+			if(union == null)
+				union = (BitSet) conf1.clone();
+			else
+				union.or(conf1);
+		}
+
+		HashMap<String, String> startColors = new HashMap<>();
+		List<Integer> startEvts = new ArrayList<>();
+
+//		List<Integer> visibleStartEvents = new ArrayList<>();
+		for (int i = inter.nextSetBit(0); i >= 0; i = inter.nextSetBit(i+1))
+			if(model.getLabels().contains(pes.getLabel(i)))
+				startEvts.add(i);
+
+
+		for(Integer event : startEvts){
+			if(!commonLabels.contains(pes.getLabel(event)))
+				continue;
+
+			BitSet conf1 = pes.getLocalConfiguration(event);
+			Trace<Integer> trace = new Trace<>();
+			trace.addAllStrongCauses(pes.getEvents(conf1));
+
+			HashMap<String, String> colorsBPMN = replayerBPMN.execute(pes.getLabel(event), pes.getPomset(conf1, commonLabels), new HashMap<String, Integer>(), null);
+
+			for(Entry<String, String> entry : colorsBPMN.entrySet())
+				if(entry.getValue().equals("red"))
+					start.add(entry.getKey());
+				else if(!start.contains(entry.getKey()) && !a.contains(entry.getKey()))
+					startColors.put(entry.getKey(), "green");
+		}
+
+		Set<String> futureLabels =  null;
+
+		for(Integer event : events){
+			if(futureLabels == null)
+				futureLabels = pes.getPossibleFutureAsLabels(getMultiset(pes.getLocalConfiguration(event)));
+			else
+				futureLabels.retainAll(pes.getPossibleFutureAsLabels(getMultiset(pes.getLocalConfiguration(event))));
+		}
+
+		Set<String> visibleFinalEvents = new HashSet<>();
+		for(String ev : futureLabels)
+			if(model.getLabels().contains(ev) && !visibleLabels.contains(ev))
+				visibleFinalEvents.add(ev);
+
+		HashMap<String, String> endColors = new HashMap<>();
+		HashMap<String, String> colorsBPMN = replayerBPMN.getEnd(a.get(0), a.get(0), visibleFinalEvents);
+		for (Entry<String, String> entry : colorsBPMN.entrySet()) {
+			if (entry.getValue().equals("red"))
+				end.add(entry.getKey());
+			else if(!start.contains(entry.getKey()) && !a.contains(entry.getKey()) && !end.contains(entry.getKey()))
+				endColors.put(entry.getKey(), "green");
+		}
+
+		for(String element : aColors.keySet())
+			if(!startColors.containsKey(element) && !start.contains(element))
+				greys.add(element);
+
+		for(String element : endColors.keySet())
+			if(!startColors.containsKey(element) && !start.contains(element) && !a.contains(element))
+				greys.add(element);
+
+		HashSet<String> allReleventEdges = new HashSet<>();
+		allReleventEdges.addAll(start);
+		allReleventEdges.addAll(end);
+		allReleventEdges.addAll(a);
+		allReleventEdges.addAll(greys);
+		HashSet<String> flows = replayerBPMN.getEdgesBetween(allReleventEdges);
+		greys.addAll(flows);
+
+		DifferenceML diff = new DifferenceML();
+		diff.setSentence(sentence);
+		diff.setA(a);
+		diff.setStart(start);
+		diff.setEnd(end);
+		diff.setGreys(greys);
+
+		// For testing
+		HashMap<String, String> newColorsBP = new HashMap<>();
+		for (String s : start)
+			newColorsBP.put(s, "blue");
+
+		for (String s : end)
+			newColorsBP.put(s, "blue");
+
+		for (String s : greys)
+			newColorsBP.put(s, "gray");
+
+		for (String s : a)
+			newColorsBP.put(s, "red");
+
+//        printModels("m", "1", net, loader, null, newColorsBP, new HashMap<String, Integer>(), new HashMap<String, Integer>());
+
+		return diff;
+	}
+
     private DifferenceML print2Tasks(Integer event1, Integer event2, NewUnfoldingPESSemantics<Integer> pes, BPMNReplayerML replayerBPMN, PetriNet net, BPMNReader loader, String sentence) {
         if(!commonLabels.contains(pes.getLabel(event1)) && !commonLabels.contains(pes.getLabel(event2)))
             return null;
@@ -2912,882 +3091,29 @@ public class DiffMLGraphicalVerbalizer {
 
 		return runs;
 	}
-//
-//	private String getSentence(String task1, String task2, String task3, String task4, BehaviorRelation rel1, BehaviorRelation rel2, String context) {
-//		String verbR1 = "";
-//
-//		if (rel1.equals(BehaviorRelation.CAUSALITY))
-//			verbR1 = String.format("task %s occurs before %s", task1, task2);
-//		else if (rel1.equals(BehaviorRelation.INV_CAUSALITY))
-//			verbR1 = String.format("task %s occurs before %s", task2, task1);
-//		else if (rel1.equals(BehaviorRelation.CONFLICT))
-//			verbR1 = String.format("either task %s occurs or %s", task1, task2);
-//		else if (rel1.equals(BehaviorRelation.CONCURRENCY))
-//			verbR1 = String.format("tasks %s and %s can occur in parallel", task1, task2);
-//
-//		String verbR2 = "";
-//
-//		if (rel2.equals(BehaviorRelation.CAUSALITY))
-//			verbR2 = String.format("task %s occurs before %s", task3, task4);
-//		else if (rel2.equals(BehaviorRelation.INV_CAUSALITY))
-//			verbR2 = String.format("task %s occurs before %s", task4, task3);
-//		else if (rel2.equals(BehaviorRelation.CONFLICT))
-//			verbR2 = String.format("either task %s occurs or %s", task3, task4);
-//		else if (rel2.equals(BehaviorRelation.CONCURRENCY))
-//			verbR2 = String.format("tasks %s and %s can occur in parallel", task3, task4);
-//
-//		String statement = String.format("In model 1, there is a state after %s where %s, whereas in the matching state in model 2, %s.",
-//				context, verbR1, verbR2);
-//		// System.out.println(statement);
-//		return statement;
-//	}
-//
-//	private void verbalize(String task1, String task2, BehaviorRelation rel1, BehaviorRelation rel2, String context) {
-//		String verbR1 = "";
-//
-//		if (rel1.equals(BehaviorRelation.CAUSALITY))
-//			verbR1 = String.format("task %s occurs before %s", task1, task2);
-//		else if (rel1.equals(BehaviorRelation.INV_CAUSALITY))
-//			verbR1 = String.format("task %s occurs before %s", task2, task1);
-//		else if (rel1.equals(BehaviorRelation.CONFLICT))
-//			verbR1 = String.format("either task %s occurs or %s", task1, task2);
-//		else if (rel1.equals(BehaviorRelation.CONCURRENCY))
-//			verbR1 = String.format("tasks %s and %s can occur in parallel", task1, task2);
-//
-//		String verbR2 = "";
-//
-//		if (rel2.equals(BehaviorRelation.CAUSALITY))
-//			verbR2 = String.format("task %s occurs before %s", task1, task2);
-//		else if (rel2.equals(BehaviorRelation.INV_CAUSALITY))
-//			verbR2 = String.format("task %s occurs before %s", task2, task1);
-//		else if (rel2.equals(BehaviorRelation.CONFLICT))
-//			verbR2 = String.format("either task %s occurs or %s", task1, task2);
-//		else if (rel2.equals(BehaviorRelation.CONCURRENCY))
-//			verbR2 = String.format("tasks %s and %s can occur in parallel", task1, task2);
-//
-//		String statement = String.format(
-//				"In model 1, there is a state after %s where %s, whereas in the matching state in model 2, %s.",
-//				context, verbR1, verbR2);
-//		// System.out.println(statement);
-//		statements.add(statement);
-//	}
-//
-//	private String getContext(Entry<Integer, Integer> entry1, Entry<Integer, Integer> entry2, BiMap<Integer, Integer> mappings) {
-//		Integer evt1 = entry1.getKey();
-//		Integer evt1a = entry2.getKey();
-//
-//		Integer evt2 = entry1.getValue();
-//		Integer evt2a = entry2.getValue();
-//
-//		BitSet lc1 = (BitSet) pes1.getLocalConfiguration(evt1).clone();
-//		lc1.and(pes1.getLocalConfiguration(evt1a));
-//		lc1.set(evt1, false);
-//		lc1.set(evt1a, false);
-//
-//		BitSet lc2 = (BitSet) pes2.getLocalConfiguration(evt2).clone();
-//		lc2.and(pes2.getLocalConfiguration(evt2a));
-//		lc2.set(evt2, false);
-//		lc2.set(evt2a, false);
-//
-//		BitSet map1 = new BitSet();
-//		BitSet map2 = new BitSet();
-//		for (Entry<Integer, Integer> entry : mappings.entrySet()) {
-//			map1.set(entry.getKey());
-//			map2.set(entry.getValue());
-//		}
-//
-//		lc1.and(map1);
-//		lc2.and(map2);
-//
-//		HashSet<String> filt = new HashSet<>(pes1.getConfigurationLabels(lc1));
-//		filt.retainAll(commonLabels);
-//		return filt.toString();
-//	}
-//
-//	private void verbalizeAcyclicDifferences(List<Operation> opSeq, List<int[]> diffIndexesList, int index) {
-//		for (int[] diffIndexes : diffIndexesList) {
-//			Operation firstMatching = opSeq.get(diffIndexes[0]);
-//			Operation secondMatching = opSeq.get(diffIndexes[2]);
-//			Operation firstHiding = opSeq.get(diffIndexes[1]);
-//			Pair<Integer, Integer> firstMatchingEventPair = (Pair) firstMatching.target;
-//			Pair<Integer, Integer> secondMatchingEventPair = (Pair) secondMatching.target;
-//
-//			BitSet context1 = (BitSet) secondMatching.nextState.c1.clone();
-//			context1.andNot(firstMatching.nextState.c1);
-//			context1.clear(secondMatchingEventPair.getFirst());
-//
-//			BitSet context2 = (BitSet) secondMatching.nextState.c2.clone();
-//			context2.andNot(firstMatching.nextState.c2);
-//			context2.set(secondMatchingEventPair.getSecond(), false);
-//
-//			String firstHidingLabel = firstHiding.label;
-//
-//			if (firstHiding.op == Op.LHIDE) {
-//				Pair<Operation, Boolean> pair = findRHide(opSeq, diffIndexes, firstHidingLabel);
-//				Operation secondHiding = pair.getFirst();
-//
-//				// Found a corresponding RHIDE
-//				if (pair.getSecond()) {
-//					context1.set(firstMatchingEventPair.getFirst());
-//					context2.set(firstMatchingEventPair.getSecond());
-//
-//					if (!globalDiffs.contains(context1, context2)) {
-//						// System.out.printf("LEFT: %s(%d) %s %s(%d)\n",
-//						// firstMatching.label,
-//						// firstMatchingEventPair.getFirst(),
-//						// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//						// (Integer)firstHiding.target),
-//						// firstHidingLabel, (Integer)firstHiding.target);
-//						// System.out.printf("RIGHT: %s(%d) %s %s(%d)\n",
-//						// firstMatching.label,
-//						// firstMatchingEventPair.getSecond(),
-//						// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//						// (Integer)secondHiding.target),
-//						// secondHiding.label, (Integer)secondHiding.target);
-//						verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(), firstMatching.label,
-//								(Integer) firstHiding.target, firstHidingLabel, firstMatchingEventPair.getSecond(),
-//								firstMatching.label, (Integer) secondHiding.target, secondHiding.label);
-//					}
-//				} else if (secondHiding != null) {
-//					// ========= Symmetric <<==
-//					if (!globalDiffs.contains(context1, context2)) {
-//						String statement = String.format(
-//								"In the log, after the occurrence of %s(%d), %s(%d) is substituted by %s(%d)\n",
-//								firstMatching.label, firstMatchingEventPair.getFirst(), firstHiding.label,
-//								(Integer) firstHiding.target, secondHiding.label, (Integer) secondHiding.target);
-//
-//						statements.add(statement);
-//						System.out.println(statement);
-//					}
-//				} else {
-//					// No RHIDE found within difference context
-//					if (firstMatching.nextState.labels.contains(firstHidingLabel)) {
-//						if (!globalDiffs.contains(context1, context2)) {
-//							String statement = String.format(
-//									"In the log, after the occurrence of %s(%d), %s(%d) is duplicated, while in the model it is not\n",
-//									firstMatching.label, firstMatchingEventPair.getFirst(), firstHidingLabel,
-//									(Integer) firstHiding.target);
-//
-//							statements.add(statement);
-//							System.out.println(statement);
-//						}
-//					} else {
-//						int e2 = firstMatchingEventPair.getSecond();
-//						BitSet dconflict = pes2.getDirectConflictSet(e2);
-//						boolean found = false;
-//						Integer e2p = null;
-//
-//						for (Integer pe = dconflict.nextSetBit(0); pe >= 0; pe = dconflict.nextSetBit(pe + 1))
-//							if (!pe.equals(e2) && pes2.getBRelation(e2, pe) == BehaviorRelation.CONFLICT
-//									&& firstHidingLabel.equals(pes2.getLabel(pe))) {
-//								eventsConsideredByConflictRelation.add(pe);
-//								found = true;
-//								e2p = pe;
-//								break;
-//							}
-//
-//						if (found) {
-//							context1.set(firstMatchingEventPair.getFirst());
-//							context2.set(firstMatchingEventPair.getSecond());
-//							context2.set(e2p);
-//
-//							if (!globalDiffs.contains(context1, context2)) {
-//								// System.out.printf("LEFT: %s(%d) %s %s(%d)\n",
-//								// firstMatching.label,
-//								// firstMatchingEventPair.getFirst(),
-//								// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//								// (Integer)firstHiding.target),
-//								// firstHidingLabel,
-//								// (Integer)firstHiding.target);
-//								// System.out.printf("RIGHT: %s(%d) %s
-//								// %s(%d)\n",
-//								// firstMatching.label,
-//								// firstMatchingEventPair.getSecond(),
-//								// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//								// e2p),
-//								// pes2.getLabel(e2p), e2p);
-//								verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(),
-//										firstMatching.label, (Integer) firstHiding.target, firstHiding.label,
-//										firstMatchingEventPair.getSecond(), firstMatching.label, e2p,
-//										pes2.getLabel(e2p));
-//							}
-//						} else {
-//							e2 = firstMatchingEventPair.getSecond();
-//							BitSet succs2 = pes2.getDirectSuccessors(e2);
-//
-//							succs2.andNot(context2);
-//
-//							found = false;
-//							e2p = null;
-//
-//							for (int ev = succs2.nextSetBit(0); ev >= 0; ev = succs2.nextSetBit(ev + 1))
-//								if (firstHidingLabel.equals(pes2.getLabel(ev))) {
-//									found = true;
-//									e2p = ev;
-//									break;
-//								}
-//
-//							if (found) {
-//								context1.set(secondMatchingEventPair.getFirst());
-//								context2.set(e2p);
-//								context2.set(secondMatchingEventPair.getSecond());
-//
-//								if (!globalDiffs.contains(context1, context2)) {
-//									// System.out.printf("LEFT: %s(%d) %s
-//									// %s(%d)\n",
-//									// secondMatching.label,
-//									// secondMatchingEventPair.getFirst(),
-//									// pes1.getBRelation(secondMatchingEventPair.getFirst(),
-//									// (Integer)firstHiding.target),
-//									// firstHidingLabel,
-//									// (Integer)firstHiding.target);
-//									// System.out.printf("RIGHT: %s(%d) %s
-//									// %s(%d)\n",
-//									// secondMatching.label,
-//									// secondMatchingEventPair.getSecond(),
-//									// pes2.getBRelation(secondMatchingEventPair.getSecond(),
-//									// e2p),
-//									// pes2.getLabel(e2p), e2p);
-//									verbalizeBehDiffFromModelPerspective(secondMatchingEventPair.getFirst(),
-//											secondMatching.label, (Integer) firstHiding.target, firstHiding.label,
-//											secondMatchingEventPair.getSecond(), secondMatching.label, e2p,
-//											pes2.getLabel(e2p));
-//								}
-//							} else {
-//
-//								found = false;
-//								e2p = null;
-//								BitSet directS = pes2.getDirectSuccessors(secondMatchingEventPair.getSecond());
-//
-//								for (int ev = directS.nextSetBit(0); ev >= 0; ev = directS.nextSetBit(ev + 1))
-//									if (firstHidingLabel.equals(pes2.getLabel(ev))) {
-//										found = true;
-//										e2p = ev;
-//										break;
-//									}
-//
-//								if (found) {
-//									context1.set(secondMatchingEventPair.getFirst());
-//									context2.set(e2p);
-//									context2.set(secondMatchingEventPair.getSecond());
-//
-//									if (!globalDiffs.contains(context1, context2)) {
-//										// System.out.printf("LEFT: %s(%d) %s
-//										// %s(%d)\n",
-//										// secondMatching.label,
-//										// secondMatchingEventPair.getFirst(),
-//										// pes1.getBRelation(secondMatchingEventPair.getFirst(),
-//										// (Integer)firstHiding.target),
-//										// firstHidingLabel,
-//										// (Integer)firstHiding.target);
-//										// System.out.printf("RIGHT: %s(%d) %s
-//										// %s(%d)\n",
-//										// secondMatching.label,
-//										// secondMatchingEventPair.getSecond(),
-//										// pes2.getBRelation(secondMatchingEventPair.getSecond(),
-//										// e2p),
-//										// pes2.getLabel(e2p), e2p);
-//										verbalizeBehDiffFromModelPerspective(secondMatchingEventPair.getFirst(),
-//												secondMatching.label, (Integer) firstHiding.target, firstHiding.label,
-//												secondMatchingEventPair.getSecond(), secondMatching.label, e2p,
-//												pes2.getLabel(e2p));
-//									}
-//								} else {
-//									found = false;
-//									e2p = null;
-//									for (int i = diffIndexes[0]; i > 0; i--) {
-//										if (opSeq.get(i).op == Op.RHIDE) {
-//											Integer hiddenEvent = (Integer) opSeq.get(i).target;
-//											if (firstHidingLabel.equals(pes2.getLabel(hiddenEvent))) {
-//												found = true;
-//												e2p = hiddenEvent;
-//												break;
-//											}
-//										}
-//									}
-//									if (found) {
-//										context1.set(firstMatchingEventPair.getFirst());
-//										context2.set(firstMatchingEventPair.getSecond());
-//										context2.set(e2p);
-//
-//										if (!globalDiffs.contains(context1, context2)) {
-//											// System.out.printf("LEFT: %s(%d)
-//											// %s %s(%d)\n",
-//											// firstMatching.label,
-//											// firstMatchingEventPair.getFirst(),
-//											// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//											// (Integer)firstHiding.target),
-//											// firstHidingLabel,
-//											// (Integer)firstHiding.target);
-//											// System.out.printf("RIGHT: %s(%d)
-//											// %s %s(%d)\n",
-//											// firstMatching.label,
-//											// firstMatchingEventPair.getSecond(),
-//											// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//											// e2p),
-//											// pes2.getLabel(e2p), e2p);
-//
-//											verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(),
-//													firstMatching.label, (Integer) firstHiding.target,
-//													firstHiding.label, firstMatchingEventPair.getSecond(),
-//													firstMatching.label, e2p, pes2.getLabel(e2p));
-//										}
-//									} else {
-//										context1.set(firstMatchingEventPair.getFirst());
-//
-//										if (!globalDiffs.contains(context1, context2)) {
-//											String statement = String.format(
-//													"In the log, %s(%d) occurs after %s(%d), while in the model it does not\n",
-//													firstHidingLabel, (Integer) firstHiding.target, firstMatching.label,
-//													firstMatchingEventPair.getFirst());
-//
-//											statements.add(statement);
-//											// System.out.println(statement);
-//										}
-//									}
-//								}
-//							}
-//						}
-//					}
-//				}
-//
-//			} else {
-//				Pair<Operation, Boolean> pair = findLHide(opSeq, diffIndexes, firstHidingLabel);
-//				Operation secondHiding = pair.getFirst();
-//
-//				// Found an LHIDE on an event with the same label
-//				if (pair.getSecond()) {
-//					context1.set(firstMatchingEventPair.getFirst());
-//					context2.set(firstMatchingEventPair.getSecond());
-//
-//					if (!globalDiffs.contains(context1, context2)) {
-//						// System.out.printf("**LEFT: %s(%d) %s %s(%d)\n",
-//						// firstMatching.label,
-//						// firstMatchingEventPair.getFirst(),
-//						// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//						// (Integer)secondHiding.target),
-//						// secondHiding.label, (Integer)secondHiding.target);
-//						// System.out.printf("RIGHT: %s(%d) %s %s(%d)\n",
-//						// firstMatching.label,
-//						// firstMatchingEventPair.getSecond(),
-//						// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//						// (Integer)firstHiding.target),
-//						// firstHidingLabel, (Integer)firstHiding.target);
-//
-//						verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(), firstMatching.label,
-//								(Integer) secondHiding.target, secondHiding.label, firstMatchingEventPair.getSecond(),
-//								firstMatching.label, (Integer) firstHiding.target, firstHiding.label);
-//					}
-//				} else if (secondHiding != null) {
-//					// ========= Symmetric <<==
-//					if (!globalDiffs.contains(context1, context2)) {
-//						String statement = String.format(
-//								"In the log, after the occurrence of %s(%d), %s(%d) is substituted by %s(%d)\n",
-//								firstMatching.label, firstMatchingEventPair.getFirst(), firstHiding.label,
-//								(Integer) firstHiding.target, secondHiding.label, (Integer) secondHiding.target);
-//
-//						statements.add(statement);
-//						System.out.println(statement);
-//					}
-//				} else {
-//					// No LHIDE found within this Difference Context
-//					if (firstMatching.nextState.labels.contains(firstHidingLabel)) {
-//						if (!globalDiffs.contains(context1, context2)) {
-//							String statement = String.format(
-//									"In the model, after the occurrence of %s(%d), %s(%d) is duplicated, while in the log it is not\n",
-//									firstMatching.label, firstMatchingEventPair.getFirst(), firstHidingLabel,
-//									(Integer) firstHiding.target);
-//
-//							statements.add(statement);
-//							System.out.println(statement);
-//						}
-//					} else {
-//						Integer e1 = firstMatchingEventPair.getFirst();
-//						boolean found = false;
-//						Integer e1p = null;
-//
-//						BitSet dconflict = pes1.getDirectConflictSet(e1);
-//
-//						for (Integer pe = dconflict.nextSetBit(0); pe >= 0; pe = dconflict.nextSetBit(pe + 1))
-//							if (!pe.equals(e1) && pes1.getBRelation(e1, pe) == BehaviorRelation.CONFLICT
-//									&& firstHidingLabel.equals(pes1.getLabel(pe))) {
-//								eventsConsideredByConflictRelation.add(pe);
-//								found = true;
-//								e1p = pe;
-//								break;
-//							}
-//
-//						if (found) {
-//							context1.or(dconflict);
-//							context1.set(e1);
-//							context2.set(firstMatchingEventPair.getSecond());
-//
-//							if (!globalDiffs.contains(context1, context2)) {
-//								// System.out.printf("LEFT: %s(%d) %s %s(%d)\n",
-//								// firstMatching.label,
-//								// firstMatchingEventPair.getFirst(),
-//								// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//								// e1p),
-//								// pes1.getLabel(e1p), e1p);
-//								// System.out.printf("RIGHT: %s(%d) %s
-//								// %s(%d)\n",
-//								// firstMatching.label,
-//								// firstMatchingEventPair.getSecond(),
-//								// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//								// (Integer)firstHiding.target),
-//								// firstHidingLabel,
-//								// (Integer)firstHiding.target);
-//
-//								verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(),
-//										firstMatching.label, (Integer) e1p, pes1.getLabel(e1p),
-//										firstMatchingEventPair.getSecond(), firstMatching.label,
-//										(Integer) firstHiding.target, firstHiding.label);
-//
-//							}
-//						} else {
-//							found = false;
-//							e1p = null;
-//							Pair<Integer, Integer> secondMatchingPair = (Pair) secondMatching.target;
-//
-//							e1 = secondMatchingPair.getFirst();
-//							dconflict = pes1.getDirectConflictSet(e1);
-//
-//							for (Integer pe = dconflict.nextSetBit(0); pe >= 0; pe = dconflict.nextSetBit(pe + 1))
-//								if (!pe.equals(e1) && pes1.getBRelation(e1, pe) == BehaviorRelation.CONFLICT
-//										&& firstHidingLabel.equals(pes1.getLabel(pe))) {
-//									eventsConsideredByConflictRelation.add(pe);
-//									found = true;
-//									e1p = pe;
-//									break;
-//								}
-//							if (found) {
-//								found = false;
-//
-//								for (Operation succ : descendants.get(firstMatching.nextState))
-//									if (succ.op == Op.MATCH) {
-//										found = matchSecond(succ.nextState, context2, secondMatchingPair.getSecond());
-//										if (found)
-//											break;
-//									}
-//
-//								if (found) {
-//									if (!globalDiffs.contains(context1, context2)) {
-//										String statement = String.format(
-//												"In the log, %s(%s) can be skipped, while in the model it cannot\n",
-//												translate(context2), context2);
-//
-//										statements.add(statement);
-//										System.out.println(statement);
-//									}
-//								} else {
-//									context1.set(e1p);
-//									context1.set(secondMatchingEventPair.getFirst());
-//									context2.set(secondMatchingEventPair.getSecond());
-//
-//									if (!globalDiffs.contains(context1, context2)) {
-//										// System.out.printf("LEFT: %s(%d) %s
-//										// %s(%d)\n",
-//										// pes1.getLabel(e1p), e1p,
-//										// pes1.getBRelation(e1p,
-//										// secondMatchingEventPair.getFirst()),
-//										// secondMatching.label,
-//										// secondMatchingEventPair.getFirst());
-//										// System.out.printf("RIGHT: %s(%d) %s
-//										// %s(%d)\n",
-//										// firstHidingLabel,
-//										// (Integer)firstHiding.target,
-//										// pes2.getBRelation((Integer)firstHiding.target,
-//										// secondMatchingEventPair.getSecond()),
-//										// secondMatching.label,
-//										// secondMatchingEventPair.getSecond());
-//										verbalizeBehDiffFromModelPerspective((Integer) e1p, pes1.getLabel(e1p),
-//												secondMatchingEventPair.getFirst(), secondMatching.label,
-//												(Integer) firstHiding.target, firstHiding.label,
-//												secondMatchingEventPair.getSecond(), secondMatching.label);
-//									}
-//								}
-//							} else {
-//								e1 = secondMatchingEventPair.getFirst();
-//								BitSet preds1 = (BitSet) pes1.getDirectPredecessors(e1).clone();
-//
-//								preds1.andNot(context1);
-//
-//								found = false;
-//								e1p = null;
-//								for (Integer ev = preds1.nextSetBit(0); ev >= 0; ev = preds1.nextSetBit(ev + 1))
-//									if (firstHidingLabel.equals(pes1.getLabel(ev))) {
-//										found = true;
-//										e1p = ev;
-//										break;
-//									}
-//
-//								if (found) {
-//									context1.set(e1p);
-//									context1.set(firstMatchingEventPair.getFirst());
-//									context2.set(firstMatchingEventPair.getSecond());
-//
-//									if (!globalDiffs.contains(context1, context2)) {
-//										// System.out.printf("LEFT: %s(%d) %s
-//										// %s(%d)\n",
-//										// firstMatching.label,
-//										// firstMatchingEventPair.getFirst(),
-//										// pes1.getBRelation(firstMatchingEventPair.getFirst(),
-//										// e1p),
-//										// firstHidingLabel, e1p);
-//										// System.out.printf("RIGHT: %s(%d) %s
-//										// %s(%d)\n",
-//										// firstMatching.label,
-//										// firstMatchingEventPair.getSecond(),
-//										// pes2.getBRelation(firstMatchingEventPair.getSecond(),
-//										// (Integer)firstHiding.target),
-//										// firstHidingLabel,
-//										// (Integer)firstHiding.target);
-//										verbalizeBehDiffFromModelPerspective(firstMatchingEventPair.getFirst(),
-//												firstMatching.label, (Integer) e1p, pes1.getLabel(e1p),
-//												firstMatchingEventPair.getSecond(), firstMatching.label,
-//												(Integer) firstHiding.target, firstHiding.label);
-//									}
-//								} else {
-//
-//									found = false;
-//									e1p = null;
-//
-//									BitSet succs = pes1.getDirectSuccessors(firstMatchingEventPair.getFirst());
-//									for (int ev = succs.nextSetBit(0); ev >= 0; ev = succs.nextSetBit(ev + 1))
-//										if (firstHidingLabel.equals(pes1.getLabel(ev))) {
-//											found = true;
-//											e1p = ev;
-//											break;
-//										}
-//
-//									if (found) {
-//										context1.set(e1p);
-//										context1.set(secondMatchingEventPair.getFirst());
-//										context2.set(secondMatchingEventPair.getSecond());
-//
-//										if (!globalDiffs.contains(context1, context2)) {
-//											// System.out.printf("LEFT: %s(%d)
-//											// %s %s(%d)\n",
-//											// firstHidingLabel, e1p,
-//											// pes1.getBRelation(e1p,
-//											// secondMatchingEventPair.getFirst()),
-//											// secondMatching.label,
-//											// secondMatchingEventPair.getFirst());
-//											// System.out.printf("RIGHT: %s(%d)
-//											// %s %s(%d)\n",
-//											// firstHidingLabel,
-//											// (Integer)firstHiding.target,
-//											// pes2.getBRelation((Integer)firstHiding.target,
-//											// secondMatchingEventPair.getSecond()),
-//											// secondMatching.label,
-//											// secondMatchingEventPair.getSecond());
-//											verbalizeBehDiffFromModelPerspective((Integer) e1p, pes1.getLabel(e1p),
-//													secondMatchingEventPair.getFirst(), secondMatching.label,
-//													(Integer) firstHiding.target, firstHiding.label,
-//													secondMatchingEventPair.getSecond(), secondMatching.label);
-//										}
-//
-//									} else {
-//										context2.set((Integer) firstHiding.target);
-//										if (!globalDiffs.contains(context1, context2)) {
-//											String statement = String.format(
-//													"In the model, %s(%d) occurs after %s(%d), while in the log it does not\n",
-//													firstHidingLabel, (Integer) firstHiding.target, firstMatching.label,
-//													firstMatchingEventPair.getSecond());
-//
-//											statements.add(statement);
-//											System.out.println(statement);
-//										}
-//									}
-//								}
-//							}
-//						}
-//					}
-//				}
-//			}
-//
-//			// System.out.printf("Context '%s, %s'\n", context1, context2);
-//			String statement = String.format("\tFirst match [%s: (%d),(%d)], Second match [%s: (%d),(%d)]\n",
-//					firstMatching.label, firstMatchingEventPair.getFirst(), firstMatchingEventPair.getSecond(),
-//					secondMatching.label, secondMatchingEventPair.getFirst(), secondMatchingEventPair.getSecond());
-//
-//			statements.add(statement);
-//			// System.out.println(statements);
-//
-//			Map<Integer, int[]> diffs = globalDiffs.get(context1, context2);
-//			if (diffs == null)
-//				globalDiffs.put(context1, context2, diffs = new HashMap<>());
-//			if (!diffs.containsKey(index))
-//				diffs.put(index, diffIndexes);
-//		}
-//	}
-//
-//	// private void verbalizeBehDiffFromLogPerspective(Integer e1,
-//	// String e1l, Integer e1p, String e1pl,
-//	// Integer e2, String e2l, Integer e2p, String e2pl) {
-//	// System.out.printf("In the log, %s(%d) %s %s(%d), while in the model
-//	// %s(%d) %s %s(%d)\n",
-//	// e1l, e1, verbalizeBRel(pes1.getBRelation(e1, e1p)), e1pl, e1p,
-//	// e2l, e2, verbalizeBRel(pes2.getBRelation(e2, e2p)), e2pl, e2p);
-//	// }
-//
-//	private void verbalizeBehDiffFromModelPerspective(Integer e1, String e1l, Integer e1p, String e1pl, Integer e2,
-//			String e2l, Integer e2p, String e2pl) {
-//		String statement = String.format("In the model, %s(%d) %s %s(%d), while in the event log %s(%d) %s %s(%d)\n",
-//				e2l, e2, verbalizeBRel(pes2.getBRelation(e2, e2p)), e2pl, e2p, e1l, e1,
-//				verbalizeBRel(pes1.getBRelation(e1, e1p)), e1pl, e1p);
-//
-//		statements.add(statement);
-//		System.out.println(statement);
-//	}
-//
-//	private String verbalizeBRel(BehaviorRelation bRelation) {
-//		switch (bRelation) {
-//		case CAUSALITY:
-//			return "occurs before";
-//		case INV_CAUSALITY:
-//			return "occurs after";
-//		case CONCURRENCY:
-//			return "occurs concurrently to";
-//		case CONFLICT:
-//			return "cannot occur in the same run with";
-//		default:
-//			break;
-//		}
-//		return null;
-//	}
-//
-//	private boolean matchSecond(State curr, BitSet context2, Integer ev2) {
-//		boolean result = false;
-//		for (Operation op : descendants.get(curr)) {
-//			switch (op.op) {
-//			case MATCH:
-//				// case MATCHNSHIFT:
-//				Pair<Integer, Integer> pair = (Pair) op.target;
-//				if (context2.get(pair.getSecond()))
-//					result = matchSecond(op.nextState, context2, ev2);
-//				else if (pair.getSecond().equals(ev2))
-//					return true;
-//				break;
-//			case RHIDE:
-//				// case RHIDENSHIFT:
-//				if (context2.get(((Pair<Integer, Integer>) op.target).getSecond()))
-//					result = matchSecond(op.nextState, context2, ev2);
-//				break;
-//			default:
-//				break;
-//			}
-//		}
-//		return result;
-//	}
-//
-//	private Pair<Operation, Boolean> findLHide(List<Operation> opSeq, int[] diffIndexes, String firstHidingLabel) {
-//		Operation firstRHiding = null;
-//		for (int i = diffIndexes[1] + 1; i < diffIndexes[2]; i++) {
-//			Operation secondHidingOperation = opSeq.get(i);
-//			if (secondHidingOperation.op == Op.LHIDE) {
-//				if (firstHidingLabel.equals(secondHidingOperation.label)) {
-//					// System.out.println("Found a matching for hidden event: "
-//					// + secondHidingOperation.target);
-//					return new Pair<>(secondHidingOperation, true);
-//				} else if (firstRHiding == null)
-//					firstRHiding = secondHidingOperation;
-//			}
-//		}
-//		return new Pair<>(firstRHiding, false);
-//	}
-//
-//	private Pair<Operation, Boolean> findRHide(List<Operation> opSeq, int[] diffIndexes, String firstHidingLabel) {
-//		Operation firstRHiding = null;
-//		for (int i = diffIndexes[1] + 1; i < diffIndexes[2]; i++) {
-//			Operation secondHidingOperation = opSeq.get(i);
-//			if (secondHidingOperation.op == Op.RHIDE) {
-//				if (firstHidingLabel.equals(secondHidingOperation.label)) {
-//					// System.out.println("Found a matching for hidden event: "
-//					// + secondHidingOperation.target);
-//					return new Pair<>(secondHidingOperation, true);
-//				} else if (firstRHiding == null)
-//					firstRHiding = secondHidingOperation;
-//			}
-//		}
-//		return new Pair<>(firstRHiding, false);
-//	}
-//
-//	private List<int[]> getADiffContexts(List<Operation> opSeq) {
-//		List<int[]> differences = new ArrayList<>();
-//		int[] diffIndexes = null;
-//		boolean visibleEventHasBeenHidden = false;
-//
-//		State pred = root;
-//
-//		for (int i = 0; i < opSeq.size(); i++) {
-//			Operation curr = opSeq.get(i);
-//
-//			State state = curr.nextState;
-//			Map<Multiset<String>, State> map = stateSpace.get(state.c1, state.c2);
-//			if (map == null)
-//				stateSpace.put(state.c1, state.c2, map = new HashMap<>());
-//			if (map.containsKey(state.labels)) {
-//				state = map.get(state.labels);
-//				curr.nextState = state;
-//			} else
-//				map.put(state.labels, state);
-//
-//			boolean found = false;
-//			for (Operation desc : descendants.get(pred))
-//				if (desc.op == curr.op) {
-//					if (curr.op == Op.MATCH) {
-//						Pair<Integer, Integer> pair1 = (Pair) curr.target;
-//						Pair<Integer, Integer> pair2 = (Pair) desc.target;
-//						if (pair1.equals(pair2)) {
-//							found = true;
-//							break;
-//						}
-//					} else {
-//						Integer ev1 = (Integer) curr.target;
-//						Integer ev2 = (Integer) desc.target;
-//						if (ev1.equals(ev2)) {
-//							found = true;
-//							break;
-//						}
-//					}
-//				}
-//			if (!found)
-//				descendants.put(pred, curr);
-//			pred = state;
-//
-//			if (curr.op == Op.MATCH)
-//				unobservedEvents.remove((Integer) ((Pair) curr.target).getSecond());
-//			else // if (curr.op != Op.LHIDE)
-//				unobservedEvents.remove((Integer) curr.target);
-//
-//			if (diffIndexes == null) {
-//				if (curr.op == Op.LHIDE) {
-//					// System.out.println("Found earliest discrepancy (LHIDE): "
-//					// + curr);
-//					diffIndexes = new int[3];
-//					diffIndexes[0] = i - 1;
-//					diffIndexes[1] = i;
-//					visibleEventHasBeenHidden = true;
-//				} else if (curr.op == Op.RHIDE) {
-//					Integer hiddenEvent = (Integer) curr.target;
-//					// System.out.println("Found earliest discrepancy (RHIDE): "
-//					// + curr);
-//					diffIndexes = new int[3];
-//					diffIndexes[0] = i - 1;
-//
-//					visibleEventHasBeenHidden = true; // !pes2.getInvisibleEvents().contains(hiddenEvent);
-//					if (visibleEventHasBeenHidden)
-//						diffIndexes[1] = i;
-//				}
-//			} else {
-//				if (curr.op == Op.MATCH) {
-//					if (visibleEventHasBeenHidden) {
-//						// System.out.println("==> Context: " +
-//						// opSeq.subList(diffIndexes[0], i+1));
-//
-//						diffIndexes[2] = i;
-//						differences.add(diffIndexes);
-//					} else {
-//						// System.out.println("==> Context discarded: No visible
-//						// event has been hidden");
-//					}
-//					diffIndexes = null;
-//				} else {
-//					if (!visibleEventHasBeenHidden) {
-//						if (curr.op == Op.LHIDE) {
-//							diffIndexes[1] = i;
-//							visibleEventHasBeenHidden = true;
-//						} else {
-//							visibleEventHasBeenHidden = true; // !pes2.getInvisibleEvents().contains((Integer)curr.target);
-//							if (visibleEventHasBeenHidden)
-//								diffIndexes[1] = i;
-//						}
-//					}
-//				}
-//			}
-//		}
-//		return differences;
-//	}
-//
-//	private void processUnobservedEvents() {
-//
-//		System.out.println("Unobserved: " + unobservedEvents);
-//
-//		// Map<Multiset<Integer>, Multiset<Integer>> footprints =
-//		// pes2.getFootprints();
-//		Set<Integer> toRemove = new HashSet<>();
-//		// for (Multiset<Integer> footprint: footprints.keySet()) {
-//		// if (unobservedEvents.containsAll(footprint)) {
-//		// BitSet cycle = footprints.get(footprint);
-//		// System.out.printf("In the model, the interval %s is repeated multiple
-//		// times, while in the log it is not",
-//		// translate(cycle));
-//		// toRemove.addAll(footprints.get(footprint));
-//		// }
-//		// }
-//
-//		unobservedEvents.removeAll(toRemove);
-//
-//		Set<Integer> primeUnobservedEvents = new HashSet<>();
-//
-//		for (Integer ev : unobservedEvents) {
-//			boolean found = false;
-//			BitSet predecessors = pes2.getDirectPredecessors(ev);
-//			for (int pred = predecessors.nextSetBit(0); pred >= 0; pred = predecessors.nextSetBit(pred + 1))
-//				if (unobservedEvents.contains(pred)) {
-//					found = true;
-//					break;
-//				}
-//			if (!found)
-//				primeUnobservedEvents.add(ev);
-//		}
-//
-//		// We discard all the events that, in spite of not being explicitly
-//		// represented in the PSPs, have already been considered for
-//		// verbalization
-//		primeUnobservedEvents.removeAll(eventsConsideredByConflictRelation);
-//
-//		for (Integer ev : primeUnobservedEvents) {
-//			// if (pes2.getInvisibleEvents().contains(ev)) {
-//			// BitSet _causes = pes2.getLocalConfiguration(ev);
-//			// _causes.clear(ev);
-//			// BitSet causes = new BitSet();
-//			// for (int event = _causes.nextSetBit(0); event >=0; event =
-//			// _causes.nextSetBit(event + 1))
-//			// causes.set(event);
-//			// BitSet pe2 = pes2.getPossibleExtensions(causes);
-//			//
-//			// for (int event = pe2.nextSetBit(0); event >= 0; event =
-//			// pe2.nextSetBit(event+1))
-//			// if (!pes2.getInvisibleEvents().contains(event) &&
-//			// pes2.getBRelation(ev, event) == BehaviorRelation.CONFLICT)
-//			// System.out.printf(" In the model, '%s' can be skipped, while in
-//			// the event log it cannot\n", pes2.getLabel(event));
-//			// } else
-//			{
-//				System.out.printf("    Task '%s' appears in PES2 and not in PES1\n", pes2.getLabel(ev));
-//			}
-//		}
-//	}
-//
-//	private Object translate(BitSet bs) {
-//		Set<String> set = new HashSet<>();
-//
-//		for (int ev = bs.nextSetBit(0); ev >= 0; ev = bs.nextSetBit(ev + 1))
-//			set.add(pes2.getLabel(ev));
-//		return set;
-//	}
-//
-//	public Set<String> getStatements() {
-//		return statements;
-//	}
-//
-//	public List<List<Operation>> getOpSeqs() {
-//		return this.opSeqs;
-//	}
-//
-//	public Differences getDifferences() {
-//		return differences;
-//	}
+
+//    private void verbalizeOptionalModelBehavior() {
+//        for (Entry<State, List<Integer>> entry:	expprefix.getOptionalAcyclicIntervals().entries()) {
+//            Set<String> interval = translate(entry.getValue());
+//
+//            if (interval.size() > 0) {
+//                String sentence = String.format("In the model, after %s, %s is optional",
+//                        translate(pes1, ((Pair<Integer,Integer>)lastMatchMap.get(entry.getKey()).target).getFirst()), interval);
+//
+//                // Remove the corresponding conflict mismatch
+//                conflictMismatches.remove(confTableBridge.get(ltargets.get(e).getFirst(), ltargets.get(e).getSecond()));
+//                ltargets.remove(e);
+//
+//                List<Integer> singleton = new LinkedList<>();
+//                singleton.add((Integer)rtargets.get(f).getSecond().target);
+//
+//                DifferenceML diff = printTasksHL(singleton, pes2, replayer, net, loader, sentence);
+//                if(diff != null) {
+//                    diff.setType("TASKSKIP2");
+//                    differences.add(diff);
+//                }
+//
+//            }
+//        }
+//    }
 }
